<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:paddingBottom="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_share_explanation" android:textIsSelectable="false"/>
        <ImageView android:paddingBottom="@dimen/standard_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_via_barcode" android:scaleType="center"/>
        <LinearLayout android:orientation="horizontal" android:paddingBottom="@dimen/standard_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/share_app_button" android:text="@string/button_share_app" android:layout_weight="1" style="@style/ShareButton"/>
            <Button android:id="@+id/share_bookmark_button" android:text="@string/button_share_bookmark" android:layout_weight="1" style="@style/ShareButton"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingBottom="@dimen/standard_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/share_contact_button" android:text="@string/button_share_contact" android:layout_weight="1" style="@style/ShareButton"/>
            <Button android:id="@+id/share_clipboard_button" android:text="@string/button_share_clipboard" android:layout_weight="1" style="@style/ShareButton"/>
        </LinearLayout>
        <EditText android:id="@+id/share_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/msg_share_text" android:singleLine="true" android:selectAllOnFocus="true"/>
    </LinearLayout>
</ScrollView>
