<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <SurfaceView android:id="@+id/preview_view" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <com.google.zxing.client.android.ViewfinderView android:id="@+id/viewfinder_view" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/result_view" android:background="@color/result_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="@dimen/standard_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:id="@+id/barcode_image_view" android:layout_width="160dp" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/half_padding" android:scaleType="centerInside" android:adjustViewBounds="true" android:maxWidth="160dp" android:maxHeight="160dp"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="@color/result_minor_text" android:paddingRight="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_format"/>
                    <TextView android:textColor="@color/result_minor_text" android:id="@+id/format_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="@color/result_minor_text" android:paddingRight="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_type"/>
                    <TextView android:textColor="@color/result_minor_text" android:id="@+id/type_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="@color/result_minor_text" android:paddingRight="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_time"/>
                    <TextView android:textColor="@color/result_minor_text" android:id="@+id/time_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="@color/result_minor_text" android:id="@+id/meta_text_view_label" android:paddingRight="@dimen/half_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_meta"/>
                    <TextView android:textColor="@color/result_minor_text" android:id="@+id/meta_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="22sp" android:textColor="@color/result_text" android:textColorLink="@color/result_text" android:autoLink="web" android:id="@+id/contents_text_view" android:paddingLeft="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true"/>
                    <TextView android:textColor="@color/result_text" android:textColorLink="@color/result_text" android:autoLink="web" android:id="@+id/contents_supplement_text_view" android:paddingLeft="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/result_button_view" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:visibility="gone" style="@style/ResultButton"/>
            <Button android:visibility="gone" style="@style/ResultButton"/>
            <Button android:visibility="gone" style="@style/ResultButton"/>
            <Button android:visibility="gone" style="@style/ResultButton"/>
        </LinearLayout>
    </LinearLayout>
    <TextView android:textColor="@color/status_text" android:layout_gravity="bottom|center_horizontal" android:id="@+id/status_view" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_default_status"/>
    <Button android:layout_gravity="start|top" android:id="@+id/flip_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/flip_camera" android:drawableStart="@drawable/flip_camera"/>
    <Button android:layout_gravity="top|right" android:id="@+id/torch_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/toggle_torch" android:drawableStart="@drawable/toggle_torch"/>
</merge>
